alterações no post.html e recentes.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -58,7 +58,7 @@
               >
                 <div class="fz-16 fw-medium">
                   <a
-                    href=""
+                    href="recentes.html"
                     class="text-decoration-none text-prata fz-16 me-awe-28 fw-bold"
                     >Publicações</a
                   >
