--- a/pages/index.html
+++ b/pages/index.html
@@ -32,7 +32,7 @@
         <nav class="navbar navbar-expand-lg text-white pt-awe-11 pb-awe-16">
           <div class="container-fluid">
             <div
-              class="box-logo-primary d-flex justify-content-between align-items-center"
+              class="d-flex justify-content-between align-items-center"
             >
               <a class="navbar-brand p-0 pt-awe-18" href="index.html">
                 <img src="/dist/img/icons/logo.svg" alt="logo JOR MAIS" />
