alteracao no font size mobile index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -82,13 +82,13 @@
         <div class="col-12 col-lg-6 text-center">
           <div class="position-relative">
             <img src="/dist/img/will.png" alt="" class="img-fluid" />
-            <a href="#" class="text-start box text-white fz-21 fz-md-36 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
+            <a href="#" class="text-start box text-white fz-21 fz-md-36 fz-lg-36 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
           </div>
         </div>
         <div class="col-12 col-lg-6 text-center">
           <div class="mb-awe-36 text-center mt-awe-36 mt-lg-0 position-relative">
             <img src="/dist/img/img-30.png" alt="" class="img-fluid" />
-            <a href="#" class="text-start box text-white fz-14 fz-md-21 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
+            <a href="#" class="text-start box text-white fz-14 fz-lg-21 fz-md-21 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
           </div>
 
           <div class="position-relative">
