--- a/pages/index.html
+++ b/pages/index.html
@@ -93,7 +93,7 @@
 
           <div class="position-relative">
             <img src="/dist/img/img-31.png" alt="" class="img-fluid" href="#" />
-            <a href="#" class="text-start box text-white fz-21 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
+            <a href="#" class="text-start box text-white fz-14 fz-lg-21 fz-md-21 fw-semi-bold position-absolute text-decoration-none">Will Smith é banido do Oscar por 10 anos após tapa em Chris Rock</a>
           </div>
         </div>
       </div>
