alteracoes no footer e nos cards do index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -467,28 +467,28 @@
                 <div class="d-flex justify-content-end">
                   <a
                     href="#"
-                    class="me-awe-16 fw-regular text-prata text-decoration-none"
-                    ><span class="">Cookies</span>
+                    class="me-awe-16 me-md-awe-16 me-lg-awe-16 fw-regular text-prata text-decoration-none"
+                    ><span class="fz-md-14 fz-lg-14 fz-8">Cookies</span>
                   </a>
                   <a
                     href="#"
                     class="me-awe-16 fw-regular text-prata text-decoration-none"
-                    ><span class="">Contact Sales</span>
+                    ><span class="fz-md-14 fz-lg-14 fz-8">Contact Sales</span>
                   </a>
                   <a
                     href="#"
                     class="me-awe-16 fw-regular text-prata text-decoration-none"
-                    ><span class="">Security</span>
+                    ><span class="fz-md-14 fz-lg-14 fz-8">Security</span>
                   </a>
                   <a
                     href="#"
                     class="me-awe-16 fw-regular text-prata text-decoration-none"
-                    ><span class="">Terms of Service</span>
+                    ><span class="fz-md-14 fz-lg-14 fz-8">Terms of Service</span>
                   </a>
                   <a
                     href="#"
                     class="me-awe-16 fw-regular text-prata text-decoration-none"
-                    ><span class="">Privacy Statement</span>
+                    ><span class="fz-md-14 fz-lg-14 fz-8">Privacy Statement</span>
                   </a>
                 </div>
               </div>
