--- a/pages/index.html
+++ b/pages/index.html
@@ -464,7 +464,7 @@
                     <strong class=""> AWE</strong></span
                   >
                 </div>
-                <div class="d-flex justify-content-end">
+                <div class="d-lg-flex justify-content-center justify-content-lg-end justify-content-md-end">
                   <a
                     href="#"
                     class="me-awe-16 me-md-awe-16 me-lg-awe-16 fw-regular text-prata text-decoration-none"
@@ -487,7 +487,7 @@
                   </a>
                   <a
                     href="#"
-                    class="me-awe-16 fw-regular text-prata text-decoration-none"
+                    class="fw-regular text-prata text-decoration-none"
                     ><span class="fz-md-14 fz-lg-14 fz-8">Privacy Statement</span>
                   </a>
                 </div>
@@ -497,5 +497,7 @@
         </div>
       </div>
     </footer>
+
+    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
